# ocaml-mpst

./: .gitignore  .gitmodules  .ocamlformat  .ocamlinit  README.md  benchmark.opam  concur-shims.opam  dune-project  examples.opam  examples.opam.template  instructions.md  linocaml-light.opam  mpst-basic.opam  mpst-ext.opam  mpst.opam  mpst2.opam  ocaml-mpst-http.opam  ocaml-mpst-lwt.code-workspace  ocaml-mpst-lwt.opam  ocaml-mpst-plug-http.opam  ocaml-mpst-plug.opam  ocaml-mpst.opam
benchmark/chameleons/: chameleons.ml  chameleons_body.ml  chameleons_pipes.ml  dune
benchmark/countingactor/: countingactor_codegen.ml  dune
benchmark/ring/: ast.ml  dune  nring_codegen.ml  ring.ml
benchmark/sanity/: dune  iteration.ml  msgsize.ml  msgsize_implicit.ml  msgsize_shmem.ml  ocamlmicro.ml  sanity.ml  util.ml
examples/: README.md  dune  ex.ml  ex1.ml  ex1re.re  ex2.ml  ex3.ml  ex4.ml  ex5.ml  ex6.ml  ex7.ml  ex8.ml  marshal_example.ml  run_dns.sh  run_oauth.sh  run_smtp.sh  usecase_util.ml  usecases.ml
examples/apibase/: dune  ex1.ml
examples/calc/: calc.ml  dune
examples/dns/: Dns.scr  dnshelper.ml  dnsserver.ml  dnsserver_monad.ml  dune  run.sh
examples/easy/: calc.ml  dune  ring.ml
examples/explicit/: dune  ex1.ml  ex2.ml  ex7.ml  ex8.ml  marshal_example.ml
examples/implicit/: dune  ex1.ml  ex2.ml
examples/lin/: calc_lin.ml  deleg_lin.ml  dune  roleenabling.ml
examples/mixed_choice/: dune  mixed1.ml
examples/mpst/: README.md  calc.ml  calc_reuse.ml  calc_scatter.ml  calc_util.ml  dune  polyclip.ml  polyclip_util.ml  ring.ml  scatter2.ml  toy_oauth.ml  toy_oauth_util.ml  trade.ml
examples/mult/: calc.ml  calc_scatter.ml  dune  master_worker.ml  ring.ml
examples/oauth/: cohttp_server.ml  cohttp_server_lwt.ml  dune  oauth.ml  oauth_http.ml  run.sh
examples/paper/: dune  oauth_simple.ml  oauth_simple_labels.ml
examples/protocols/: calc.ml  dnsmini.ml  dune  fibo.ml  game.ml  mapReduce.ml  nQueen.ml  oAuth.ml  protocols.ml  sH.ml  santa.ml  sapNego.ml  simpleVoting.ml  sleepingBarber.ml  smtp.ml  supplierInfo_microservice.ml  test_projection.ml  threeBuyer.ml  time.sh  travelAgency.ml  twoBuyer.ml  usecase_util.ml
examples/shmem/: calc.ml  calc_reuse.ml  dune  ex1.ml  ex2.ml  ex3.ml  ex4.ml  ex5.ml  ex6.ml  ex7.ml  ring.ml  util.ml
examples/simple/: calc.ml  calc_base.ml  calc_lin.ml  calc_lwt.ml  calc_reuse.ml  calc_scatter.ml  calc_scatter_lwt.ml  calc_util.ml  deleg.ml  deleg_lin.ml  dune  dynlin_test.ml  ex2.ml  loops.ml  parallel_loop.ml  polyclip.ml  ring.ml  roleenabling.ml  roleenabling2.ml  scatter.ml  scatter2.ml  toy_oauth.ml  toy_oauth_util.ml  trade.ml  unfair.ml
examples/smtp/: dune  smtpclient.ml  smtphelper.ml
examples/usecases/: calc.ml  dnsmini.ml  dune  fibo.ml  game.ml  mapReduce.ml  nQueen.ml  oAuth.ml  protocols.ml  sH.ml  santa.ml  sapNego.ml  simpleVoting.ml  sleepingBarber.ml  smtp.ml  supplierInfo_microservice.ml  test_projection.ml  threeBuyer.ml  travelAgency.ml  twoBuyer.ml  usecase_util.ml  usecases.ml
lib/: actionInp.ml  actionInp.mli  actionOut.ml  actionOut.mli  base.ml  base_comm.ml  basicCombinators.ml  basicCombinators.mli  channel.ml  channel_vectors.ml  chvec.ml  chvec.mli  close.ml  combinators.ml  comm.ml  comm.mli  comm_base.ml  common.ml  conn_table.ml  conn_table.mli  contextF.ml  contextF.mli  dune  dynChan.ml  dynChan.mli  dynLin.ml  dyn_lin.ml  dyncheck_ep.ml  endpoints.ml  env.ml  fuse.ml  gc2.ml  global.ml  global.mli  globalCombinators.ml  globalCombinators.mli  global_combinators.ml  global_common.ml  handler.ml  head.ml  (+79 more)
lib/async/: dune  mpst_async.ml  peripheral.ml
lib/bare/: chan.mli
lib/base/: ast.ml  base.ml  connection.ml  dune  flags.ml  lens.ml  lensLazy.ml  lensStrict.ml  linMonad.ml  linMonad.mli  linSession.ml  mpst_base.ml  raw_lwtstream.ml  raw_unixpipe.ml  s.ml
lib/broadcast/: actionGather.mli  actionMany.ml  actionMany.mli  actionScatter.ml  actionScatter.mli  broadcast.ml  broadcast.mli
lib/chan/: chan.ml  name.ml
lib/chvec/: actionInp.ml  actionOut.ml  actionOut.mli  comm.ml  extchoice.mli
lib/codegen/: ast_global.ml  codegen.ml  dune  epp.ml  gen_global.ml
lib/common/: dune  linFlag.ml  mpst_common.ml
lib/easy/: dune  mpst_easy.ml
lib/explicit/: dune  global.ml  linsession.ml  monad.ml  monad.mli  mpst_explicit.ml  parties.ml  session.ml  util.ml
lib/http/: dune  mpst_http.ml  mpst_http.mli
lib/implicit/: dune  foo.ml  forkpipe.ml  functor.ml  global.ml  mpst_implicit.ml  session.ml  util.ml
lib/lin/: combinators_lin.ml  comm_lin.ml  dune  global_combinators_lin.ml  global_combinators_lin.mli  mpst_lin.ml  mpst_lin.mli  s.mli  shared_lin.ml  shared_lin.mli
lib/lin_dyn/: lin.ml  lin.mli  linState.ml  linState.mli  mutexFlag.ml  mutexFlag.mli
lib/lwt/: dune  lwt_stream_mergeable.ml  lwt_stream_mergeable.mli  lwt_stream_opt.ml  lwt_stream_opt.mli  mpst_lwt.ml  mstream.ml  mstream.mli  peripheral.ml
lib/monad/: dune  global_monad.ml  linocaml_lin.ml  local_monad.ml  mpst_monad.ml  nocheck.ml
lib/monad_async/: dune  mpst_monad_async.ml
lib/monad_lwt/: mpst_monad_lwt.ml
lib/mult/: dune  mpst_mult.ml
lib/multicast/: actionGather.ml  actionGather.mli  actionMany.ml  actionMany.mli  actionScatter.ml  actionScatter.mli  multicast.ml  multicast.mli
lib/ref/: dune  mpst_ref.ml
lib/shmem/: dune  global.ml  lin.ml  mpst_shmem.ml  session.ml  threeParty.ml  util.ml
lib/simple/: dune  dyncheck.ml  linMonad.ml  mpst_simple.ml  s.ml  simple.ml  simple2.ml
lib/unicast/: actionInp.ml  actionInp.mli  actionOut.ml  actionOut.mli  extchoice.ml  extchoice.mli  inpChoice.ml  inpChoice.mli  unicast.ml  (+1 more)
light/: dune  light.ml  poly.ml  poly_choice.ml  poly_conn.ml
ppx/: concat.ml  dune  ppx_linmonad.ml  ppx_mpst.ml  ppx_mpst_ty.ml
shmem_examples/: dune  ex1.ml  ex2.ml  ex3.ml
tests/: dune  test_dynChan.ml  test_linearity.ml  test_linearity_fail.ml  test_ppx_ty.ml  test_protocols.ml  test_protocols_broadcast.ml  test_protocols_merge.ml  test_protocols_mergefail.ml  test_protocols_multicast.ml  test_run_broadcast.ml  test_run_loop.ml  test_run_multicast.ml
(+1189 files in other folders)
