opam-version: "2.0"
synopsis: "A thin switching layer for concurrency"

version: "dev"
license: "LGPL-3.0-or-later with OCaml-LGPL-linking-exception"
homepage: "https://github.com/keigoi/ocaml-mpst"
doc: "https://github.com/keigoi/ocaml-mpst"
bug-reports: "https://github.com/keigoi/ocaml-mpst/issues"
authors: ["Keigo Imai"]
maintainer: "Keigo Imai <keigo.imai@gmail.com>"
dev-repo: "git+https://github.com/keigoi/ocaml-mpst.git"
          
depends: [
  "ocaml" {>= "4.08.0"}
  "dune"
  "ocamlfind"
]

depopts: [
  "lwt"
  ]
  
build:
  [[ "dune" "build" "-p" name "-j" jobs ]]

description: "Cocnur_shims provide a thin layer for switching concurrency libraries -- between threads and lwt."
