opam-version: "2.0"
synopsis: "Lightweight version of LinOCaml: Linear types in OCaml via a parameterised monad"

version: "dev"
license: "LGPL-3.0-or-later with OCaml-LGPL-linking-exception"
homepage: "https://github.com/keigoi/ocaml-mpst"
doc: "https://github.com/keigoi/ocaml-mpst"
bug-reports: "https://github.com/keigoi/ocaml-mpst/issues"
authors: ["Keigo Imai"]
maintainer: "Keigo Imai <keigo.imai@gmail.com>"
dev-repo: "git+https://github.com/keigoi/ocaml-mpst.git"
          
depends: [
  "ocaml" {>= "4.08.0"}
  "dune"
  "ocamlfind"
  "concur-shims"
  "ppx_tools_versioned"
]

depopts: [
  "lwt"
  ]
  
build:
  [[ "dune" "build" "-p" name "-j" jobs ]]

description: "Lightweight version of LinOCaml: Linear types in OCaml via a parameterised monad"
