opam-version: "2.0"
synopsis: "A pluggable variant of OCaml-MPST (very tentative)"

version: "dev"
license: "LGPL-3.0-or-later with OCaml-LGPL-linking-exception"
homepage: "https://github.com/keigoi/ocaml-mpst"
doc: "https://github.com/keigoi/ocaml-mpst"
bug-reports: "https://github.com/keigoi/ocaml-mpst/issues"
authors: ["Keigo Imai"]
maintainer: "Keigo Imai <keigo.imai@gmail.com>"
dev-repo: "git+https://github.com/keigoi/ocaml-mpst.git"
          
depends: [
  "ocaml" {>= "4.08.0"}
  "dune"
  "ocamlfind"
]

depopts: [
  "lwt"
  "core"
  ]
  
build:
  [[ "dune" "build" "-p" name "-j" jobs ]]

description: "OCaml-MPST is a library implementation of Multiparty Session Types."
