(library
 (public_name ocaml-mpst)
 (name mpst)
 (libraries
  stdlib-shims
  concur-shims
  (select name.ml from
		  (lwt.unix -> name.lwt.ml)
		  (threads -> name.event.ml))
  (select stream_opt.ml from
		  (lwt.unix -> stream_opt.lwt.ml)
		  (threads -> stream_opt.event.ml))
  (select mutex_flag.ml from
		  (core.nano_mutex -> mutex_flag.nanomutex.ml)
		  (threads -> mutex_flag.mutex.ml))
  ))
