(library
 (public_name ocaml-mpst)
 (name mpst)
 (libraries
  stdlib-shims
  concur-shims
  (select name.ml from
		  (lwt.unix -> name.lwt.ml)
		  (threads -> name.threads.ml))
  (select stream_opt.ml from
		  (lwt.unix -> stream_opt.lwt.ml)
		  (threads -> stream_opt.threads.ml))
  (select mutex_flag.ml from
		  (threads -> mutex_flag.threads.ml))
  )
 (modules_without_implementation s)
)
