(executable
 (name light)
  (public_name light_ex1)
  (modules light)
  (flags ("-g" "-short-paths"))
  (libraries threads))

(executable
 (name poly)
  (public_name light_ex2)
  (modules poly)
  (flags ("-g" "-short-paths"))
  (libraries threads))

(executable
 (name poly_choice)
  (public_name light_ex3)
  (modules poly_choice)
  (flags ("-g" "-short-paths"))
  (libraries threads))
