(library
 (name ppx_mpst)
 (public_name mpst2.ppx)
 (modules ppx_mpst)
 (kind ppx_rewriter)
 (libraries ppxlib rows.ppx)
 (preprocess
  (pps ppxlib.metaquot)))

(library
 (name ppx_mpst_ty)
 (public_name mpst2.ppx.ty)
 (modules ppx_mpst_ty)
 (kind ppx_rewriter)
 (libraries ppx_mpst rows.ppx.ty ppxlib)
 (preprocess
  (pps ppxlib.metaquot)))
