(library
 (name util)
 (flags ("-g" "-short-paths"))
  (modules util)
 (libraries shmem threads lwt lwt.unix))

(executable
 (name ex1)
  (public_name ex1_shmem)
  (modules ex1)
  (flags ("-g" "-short-paths"))
  (libraries shmem util lwt.unix))

(executable
 (name ex2)
  (public_name ex2_shmem)
  (modules ex2)
  (flags ("-g" "-short-paths"))
  (libraries shmem util lwt.unix))

(executable
 (name ex3)
  (public_name ex3_shmem)
  (modules ex3)
  (flags ("-g" "-short-paths"))
  (libraries shmem util lwt.unix))
