(test
 (name test_protocols_mergefail)
 (modules test_protocols_mergefail)
 (preprocess
  (pps mpst.ppx))
 (libraries mpst oUnit))

(test
 (name test_protocols_merge)
 (modules test_protocols_merge)
 (preprocess
  (pps mpst.ppx))
 (libraries mpst oUnit))

(test
 (name test_run_loop)
 (modules test_run_loop)
 (preprocess
  (pps mpst.ppx))
 (libraries mpst oUnit))

(test
 (name test_protocols_multicast)
 (modules test_protocols_multicast)
 (preprocess
  (pps mpst.ppx))
 (libraries mpst oUnit))

(test
 (name test_run_multicast)
 (modules test_run_multicast)
 (preprocess
  (pps mpst.ppx))
 (libraries mpst oUnit))

(test
 (name test_linearity_fail)
 (modules test_linearity_fail)
 (preprocess
  (staged_pps mpst.ppx.ty))
 (libraries mpst oUnit))

(test
 (name test_ppx_ty)
 (modules test_ppx_ty)
 (preprocess
  (staged_pps mpst.ppx.ty))
 (libraries mpst oUnit))

(test
 (name test_dynChan)
 (modules test_dynChan)
 (libraries mpst oUnit))
