(executable
 (name countingactor_codegen)
 (modules countingactor_codegen)
 (public_name ocaml-mpst.bench.countingactor_codegen)
 (preprocess (pps linocaml.ppx))
 (ocamlopt_flags -O3)
 (flags ("-rectypes" "-short-paths"))
 (libraries codegen bench_util core_bench ocaml-mpst.lwt ocaml-mpst.monad.lwt ocaml-mpst.ref core.nano_mutex))

; (executable
;  (name countingactor)
;  (public_name ocaml-mpst.bench.countingactor)
;  (preprocess (pps linocaml.ppx))
;  (ocamlopt_flags -O3)
;  (flags ("-rectypes" "-short-paths"))
;  (libraries bench_util core_bench ocaml-mpst.lwt ocaml-mpst.monad.lwt ocaml-mpst.ref core.nano_mutex))
