(executable
 (name nring_codegen)
 (modules nring_codegen)
 (public_name ocaml-mpst.bench.nring_codegen)
 (preprocess (pps linocaml.ppx))
 (libraries codegen bench_util))

; (executable
;  (name ring0)
;  (modules ring0)
;  (public_name ocaml-mpst.bench.ring0)
;  (preprocess (pps linocaml.ppx))
;  (ocamlopt_flags -O3)
;  (flags ("-rectypes" "-short-paths"))
;  (libraries bench_util core_bench ocaml-mpst.lwt ocaml-mpst.monad.lwt ocaml-mpst.ref core.nano_mutex))
