(library
 (name util)
 (modules util)
 (preprocess (pps linocaml.ppx))
 (flags ("-short-paths"))
 (libraries core_bench ocaml-mpst.monad ocaml-mpst.lwt ocaml-mpst.monad.lwt ocaml-mpst.ref))

(executable
 (name sanity)
 (modules sanity)
 (public_name benchmark_sanity)
 (preprocess (pps linocaml.ppx))
 (ocamlopt_flags -O3)
 (flags ("-short-paths"))
 (libraries util))
