(library
  (name dnshelper)
  (modules dnshelper)
  (libraries ocaml-mpst dns-lwt-unix lwt.unix))

(executable
  (name     dnsserver)
  (modules dnsserver)
  (libraries ocaml-mpst dns-lwt-unix lwt.unix dnshelper))

(executable
  (name     dnsserver_monad)
  (modules dnsserver_monad)
  (libraries ocaml-mpst dns-lwt-unix lwt.unix dnshelper))
