(library
 (name marshal_example)
 (modules marshal_example)
 (flags ("-g" "-short-paths"))
 (libraries mpst_explicit lwt.unix))

(executable
 (name ex7)
  (public_name ex7)
  (modules ex7)
  (flags ("-g" "-short-paths"))
  (libraries marshal_example mpst_explicit lwt.unix))

(executable
 (name ex8)
  (public_name ex8)
  (modules ex8)
  (flags ("-g" "-short-paths"))
  (libraries marshal_example mpst_explicit lwt.unix))
