(executable
 (name ring)
 (modules ring)
 (libraries mpst))

(library
 (name calc_util)
 (modules calc_util)
 (libraries mpst))

(library
 (name polyclip_util)
 (modules polyclip_util)
 (libraries mpst))

(executable
 (name calc)
 (modules calc)
 (libraries mpst calc_util))

(executable
 (name calc_reuse)
 (modules calc_reuse)
 (libraries mpst calc_util))

(executable
 (name calc_scatter)
 (modules calc_scatter)
 (libraries mpst calc_util))

(library
 (name toy_oauth_util)
 (modules toy_oauth_util)
 (libraries mpst))

(executable
 (name toy_oauth)
 (modules toy_oauth)
 (libraries mpst toy_oauth_util))

(executable
 (name trade)
 (modules trade)
 (libraries mpst))
