; examples from K. Imai, R. Neykova and N. Yoshida,
; "Multiparty Session Programming with Global Protocol Combinators",
; 2020.

(executable
 (name oauth_simple)
  (public_name ocaml-mpst.example.oauth_simple)
  (modules oauth_simple)
  (libraries ocaml-mpst oauth_simple_labels))

(library
 (name oauth_simple_labels)
  (modules oauth_simple_labels)
  (libraries ocaml-mpst))
