(executable
 (name ex1)
  (public_name ex1_mpst_shmem)
  (modules ex1)
  (flags ("-g" "-short-paths"))
  (libraries mpst_shmem lwt.unix))

(executable
 (name ex2)
  (public_name ex2_mpst_shmem)
  (modules ex2)
  (flags ("-g" "-short-paths"))
  (libraries mpst_shmem lwt.unix))

(executable
 (name ex3)
  (public_name ex3_mpst_shmem)
  (modules ex3)
  (flags ("-g" "-short-paths"))
  (libraries mpst_shmem lwt.unix))

(executable
 (name ex6)
  (public_name ex6_mpst_shmem)
  (modules ex6)
  (flags ("-g" "-short-paths"))
  (libraries mpst_shmem lwt.unix))

(executable
 (name ex7)
  (public_name ex7_mpst_shmem)
  (modules ex7)
  (flags ("-g" "-short-paths"))
  (libraries mpst_shmem lwt.unix))
