(executable
 (name loop_unfair)
 (modules loop_unfair)
 (libraries mpst))

(executable
 (name loop_errors)
 (modules loop_errors)
 (libraries mpst))

(executable
 (name dynlin_errors)
 (modules dynlin_errors)
 (libraries mpst))

(executable
 (name scatter)
 (modules scatter)
 (libraries mpst))

(executable
 (name scatter_loop)
 (modules scatter_loop)
 (libraries mpst))

(executable
 (name delegation)
 (modules delegation)
 (libraries mpst calc_util))

(executable
 (name loop_parallel)
 (modules loop_parallel)
 (libraries mpst))

(executable
 (name fourparty_concurrent)
 (modules fourparty_concurrent)
 (libraries mpst))
